Null dereference loading Blink layout test svg/custom/use-href-attr-removal-crash.html https://bugs.webkit.org/show_bug.cgi?id=149315 <rdar://problem/22749358>

Reviewed by Tim Horton.

Source/WebCore:

We were not checking if the corresponding element referenced from
the SVG <use> actually existed before trying to set attributes on it.
The original Blink change is a little more detailed:
https://chromium.googlesource.com/chromium/blink/+/e2f1087f32bb088160ab7d59a715a1403ef267c7
However, we've significantly diverged at this point.

Tests: svg/custom/use-href-attr-removal-crash.html
       svg/custom/use-href-attr-removal-crash2.svg
       svg/custom/use-href-change-local-to-invalid-remote.html

* svg/SVGUseElement.cpp:
(WebCore::SVGUseElement::transferSizeAttributesToTargetClone):

LayoutTests:

These tests, copied from Blink, should not crash.
The originals come from:
https://chromium.googlesource.com/chromium/blink/+/e2f1087f32bb088160ab7d59a715a1403ef267c7

* svg/custom/use-href-attr-removal-crash.html: Added.
* svg/custom/use-href-attr-removal-crash-expected.txt: Added.
* svg/custom/use-href-attr-removal-crash2.svg: Added.
* svg/custom/use-href-attr-removal-crash2-expected.txt: Added.
* svg/custom/use-href-change-local-to-invalid-remote.html: Added.
* svg/custom/use-href-change-local-to-invalid-remote-expected.txt: Added.

Canonical link: https://commits.webkit.org/167456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190012 268f45cc-cd09-0410-ab3c-d52691b4dbfc